temp with lorem ipsum

--- a/css/about.css
+++ b/css/about.css
@@ -1,265 +1,124 @@
-header {
-    top: 0;
+.aboutBanner {
+    background-image: url(../images/block-1.jpg);
 }
-header + section{
-    margin-top: 90px;
+.aboutSection {
+    padding-top: 3vh;
 }
-
-
-
 .aboutContent {
-    display: table-cell;
-    width: 65%;
-    padding-right: 110px;
-}
-.aboutSection{
-    padding-bottom: 80px;
-}
-.aboutImage {
-    display: table-cell;
-    width: 35%;
-    vertical-align: top;
-}
-.aboutImage .imgHolder{
-    display: inline-block;
-    position: relative;
-}
-.aboutImage .imgHolder:before {
-    content: ' ';
-    display: block;
-    min-height: 100%;
-    width: 100%;
-    border: 9px solid var(--red-color);
-    position: absolute;
-    box-sizing: border-box;
-    top: 80px;
-    left: 80px;
-    z-index: -1;
-}
-.aboutContent p {
-    font-size: 24px;
-    font-weight: 300;
-    color: #666;
-    line-height: 32px;
-    margin-top: 30px;
-}
-
-.skillsSection {
-    background-color: var(--red-color);
-    padding: 130px 100px;
-    overflow: hidden;
-    position: relative;
-}
-.skillsSection ul li {
-    background-color: var(--white-color);
-    padding: 28px 30px;
-    width: 255px;
-    display: inline-block;
-    font-size: 35px;
-    font-weight: 600;
-    color: var(--red-color);
     text-align: center;
-    margin: 0 15px;
+    max-width: 80%;
+    margin: 0 auto;
 }
-.skillsSection ul {
-    margin-bottom: 30px;
+.aboutContent h3 {
+    font-size: 3vh;
+    font-weight: 400;
+    margin-bottom: 2.5vh;
+}
+ul.listBlocks {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 12vh auto 0;
+    flex-wrap: wrap;
+    width: 88%;
+}
+ul.listBlocks li {
     position: relative;
+    max-width: 30%;
+    text-align: center;
 }
-.skillsSection ul.mern:before, .skillsSection ul.front-end:before {
-    content: '';
-    color: #fff;
-    margin-right: 30px;
-    font-size: 40px;
-    text-align: right;
-    width: 180px;
-    display: inline-block;
-    font-family: arial;
-} 
-.skillsSection ul.mern:before{
-    content: 'MERN';
-}
-.skillsSection ul.front-end:before{
-    content: 'Front-End';
-}
-.skillsSection:before {
-    content: 'Skills';
+ul.listBlocks li a {
     position: absolute;
-    color: #333232;
-    font-size: 310px;
-    font-family: arial;
-    font-weight: 900;
-    letter-spacing: -13px;
-    opacity: 0.05;
     left: 0;
-    z-index: 0;
-    bottom: -135px;
-
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: #ce0f05;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.3s ease 0s;
+    padding: 20px;
 }
-
-
-
-.aboutSection.secondBlock .aboutImage .imgHolder:before {
-    right: 80px;
-    left: auto
+ul.listBlocks li:hover a {
+    opacity: 1;
 }
-.aboutSection.secondBlock .aboutContent {
-    padding-right: 0px;
-    padding-left: 110px;
+ul.listBlocks li * {
+    color: #fff;
+    font-size: 16px;
 }
-.aboutSection.secondBlock .aboutImage {
-padding-left: 80px;
+ul.listBlocks li h3 {
+    font-size: 22px;
+    margin-bottom: 5px;
 }
-
-
-
-
-
-
-/*Responsive css for mobile*/
-
-@media (max-width: 767px){
-.aboutContent {
-    display: table-cell;
-    width: 100%;
-    padding-right: 0;
-    text-align: center;
-}
-.aboutImage {
-    display: none;
-    width: 35%;
-    vertical-align: top;
-}
-.aboutContent p {
-    font-size: 18px;
-    line-height: 24px;
-    margin-top: 20px;
-}
-.aboutSection {
-    padding-bottom: 0;
-}
-.aboutSection.secondBlock .aboutContent {
-    padding-left: 0;
-}
-.skillsSection {
-    padding: 40px 20px;
-}
-.skillsSection ul {
-    text-align: center;
-}
-.skillsSection ul li {
-    padding: 10px 15px;
-    width: auto;
-    font-size: 14px;
-    font-weight: 400;
-    margin: 5px 3px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    line-height: 15px;
-}
-.skillsSection ul.mern:before, .skillsSection ul.front-end:before {
-    margin-right: 0px;
-    font-size: 20px;
-    text-align: center;
-    width: auto;
+ul.listBlocks li p:after {
+    content: '→';
     display: block;
-    margin-bottom: 10px;
-    font-weight: 400;
-    text-transform: uppercase;
+    position: relative;
+    left: -85px;
+    top: 13px;
+    font-size: 22px;
+    transition: all 0.3s ease 0s;
 }
-.skillsSection:before{display: none;}
+ul.listBlocks li:hover p:after {
+    left: 0px;
 }
-
-
-/*Responsive css for tab*/
-
-@media (min-width: 768px) and (max-width: 1024px){
-    .aboutContent {
-    display: table-cell;
-    width: 100%;
-    padding-right: 0;
+.secondAboutContentBlock {
+    text-align: center;
+    max-width: 82%;
+    margin: 10vh auto 0;
+}
+section.teamSection {
+    background-color: #f1f1f1;
+    max-width: 100%;
     text-align: center;
 }
-.aboutImage {
-    display: none;
-    width: 35%;
-    vertical-align: top;
-}
-.aboutContent p {
-    font-size: 21px;
-    line-height: 28px;
-    margin-top: 20px;
-}
-.aboutSection {
-    padding-bottom: 0;
-}
-.aboutSection.secondBlock .aboutContent {
-    padding-left: 0;
-}
-.skillsSection {
-    padding: 40px 20px;
-}
-.skillsSection ul {
-    text-align: center;
-}
-.skillsSection ul li {
-    padding: 11px 18px;
-    width: auto;
-    font-size: 15px;
+section.teamSection h3 {
+    font-size: 3vh;
     font-weight: 400;
-    margin: 5px 3px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    line-height: 15px;
+    margin-bottom: 2.5vh;
 }
-.skillsSection ul.mern:before, .skillsSection ul.front-end:before {
-    margin-right: 0px;
-    font-size: 27px;
-    text-align: center;
-    width: auto;
-    display: block;
-    margin-bottom: 10px;
+.teamContent {
+    max-width: 70vw;
+    margin: 0 auto;
+}
+.teamContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 38vw;
+    max-width: 735px;
+    margin: 10vh auto;
+}
+.profileImage {
+    height: 7vw;
+    width: 7vw;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+.teamBlock {
+    padding: 2vw;
+    border: 1px solid #ccc;
+    width: 45%;
+    max-width: 330px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.teamBlock h2 {
+    font-size: 3.5vh;
+    font-weight: 800;
+}
+.teamBlock h2 span {
+   color: var(--red-color);
+}
+.teamBlock h4 {
+    font-size: 2vh;
     font-weight: 400;
-    text-transform: uppercase;
 }
-.skillsSection:before{display: none;}
-}
-
-
-
-
-@media (max-width: 1600px) and (min-width: 1200px){
-.aboutContent p {
-    font-size: 21px;
-    line-height: 28px;
-    margin-top: 25px;
-}
-.aboutImage img {
-    width: 350px;
-}
-.aboutImage .imgHolder:before {
-    border: 8px solid var(--red-color);
-    top: 70px;
-    left: 70px;
-}
-.skillsSection {
-    padding: 90px 5%;
-}
-.skillsSection ul.mern:before, .skillsSection ul.front-end:before {
-    margin-right: 10px;
-    font-size: 35px;
-    width: 156px;
-}
-.skillsSection ul li {
-    padding: 17px 25px;
-    width: 190px;
-    font-size: 27px;
-    margin: 0 10px;
-}
-.skillsSection:before {
-    font-size: 260px;
-    letter-spacing: -15px;
-    left: 10px;
-    bottom: -129px;
-}
-
+.teamBlock h6{
+    font-size: 1.8vh;
+    font-weight: 400;
+    margin-top: 15px;
 }
