--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,11 @@ header > ul li a {
     color: #2a2a2a;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 3px;
-    padding: 14px;
+    letter-spacing: 2px;
+    padding: 6px 15px;
     margin: 0px;
     display: block;
-    font-size: 16px;
+    font-size: 2.25vh;
     margin-left: 1vw;
     transition: all 0.3s ease-in-out 0s;
 }
@@ -81,18 +81,30 @@ header > ul li a.active {
     background-color: var(--red-color);
     color: #fff;
     font-weight: 500;
+    letter-spacing: 1px;
 }
 header > ul li a.active:before {
 	display: none;
 }
 
-
+button {
+    background-color: #ce0f05;
+    border: none;
+    color: #fff;
+    padding: 15px 20px;
+    font-size: 2.25vh;
+    text-transform: uppercase;
+    width: 13vw;
+    max-width: 225px;
+    cursor: pointer;
+}
 
 
 footer{
     padding: 35px;
-    background-color: #f1f1f1;
+    /*background-color: #f1f1f1;*/
     text-align: center;
+    border-top: 1px solid #e3e3e3;
 }
 footer img {
     max-width: 90px;
@@ -144,7 +156,13 @@ h2.sectionHeading.bottomBar:after {
     margin: 6px auto 0;
     max-width: 200px;
 }
-
+.pageBanner {
+    height: 30vh;
+    background-color: var(--red-color);
+    background-size: cover;
+    background-position: 0;
+    margin-bottom: 12vh;
+}
 
 
 
