--- a/css/services.css
+++ b/css/services.css
@@ -40,3 +40,22 @@
     font-size: 2.5vh;
     font-weight: 500;
 }
+
+
+@media (max-width: 767px){
+
+.servicesContent {
+    max-width: 90%;
+}
+.servicesList {
+    margin: 10vh auto;
+    width: 85%;
+}
+.serviceBlock {
+    width: 44%;
+    margin: 2vw;
+}
+.serviceBlock img {
+    max-width: 80px;
+}
+}
