--- a/css/clients.css
+++ b/css/clients.css
@@ -31,7 +31,7 @@
 
 
 
-@media (max-width: 767px){
+@media (max-width: 992px){
 .clientsContent {
     max-width: 90%;
 }
@@ -46,5 +46,18 @@
 .clientBlock img {
     max-height: 40px;
     max-width: 130px;
+}
+}
+
+
+/*Responsive css for tab*/
+
+@media (min-width: 768px) and (max-width: 1024px){
+.clientsContent h3 {
+    font-size: 2.5vh;
+}
+.clientBlock img {
+    max-height: 50px;
+    max-width: 150px;
 }
 }
