--- a/css/home.css
+++ b/css/home.css
@@ -115,9 +115,20 @@ ul.listBlocks li:hover p:after {
     background-position: center;
     margin: 12vh auto 25vh;
 }
+.videoBlock iframe {
+    height: 100%;
+    width: 100%;
+}
+.videoBlock:after {
+    content: 'Video Coutsey: Exide Industries';
+    font-size: 12px;
+    margin-top: 5px;
+    display: block;
+    text-align: center;
+}
 
 
-@media (max-width: 767px){
+@media (max-width: 992px){
 
 .aboutHolder {
     max-width: 90%;
@@ -145,3 +156,18 @@ ul.listBlocks li {
     margin: 9vh auto 16vh;
 }
 }
+
+
+
+/*Responsive css for tab*/
+
+@media (min-width: 768px) and (max-width: 1024px){
+    ul.listBlocks li {
+    max-width: 44%;
+    margin: 2.5vw auto;
+}
+.blockSection {
+    height: 30vh;
+}
+}
+
