--- a/css/services.css
+++ b/css/services.css
@@ -42,7 +42,7 @@
 }
 
 
-@media (max-width: 767px){
+@media (max-width: 992px){
 
 .servicesContent {
     max-width: 90%;
@@ -59,3 +59,17 @@
     max-width: 80px;
 }
 }
+
+/*Responsive css for tab*/
+
+@media (min-width: 768px) and (max-width: 1024px){
+    .servicesContent h3 {
+    font-size: 2.4vh;
+}
+.serviceBlock h4 {
+    font-size: 2vh;
+}
+.serviceBlock img {
+    max-width: 100px;
+}
+    }
